fix: correct mia configuration in docker-compose

--- a/projects/example/docker-compose.yml
+++ b/projects/example/docker-compose.yml
@@ -12,8 +12,16 @@ services:
 
   mia:
     image: ghcr.io/i1820/mia:latest
+    links:
+      - emqx
+      - mongodb
+    ports:
+      - 8080:8080
+    restart: unless-stopped
     environment:
       MIA_MQTT__HOST: emqx
       MIA_DATABASE__NAME: mongodb
       MIA_DATABASE__CONFIG__HOST: mongodb://mognodb
-      MIA_TENANTS: parham-home
+      MIA_DATABASE__CONFIG__PORT: 27017
+      MIA_DATABASE__CONFIG__DATABASE: mia
+      MIA_TENANT: parham-home
